# emdviewer

./: .gitmodules  CMakeLists.txt  README.md  setup.txt
emdpluginlib/: CMakeLists.txt
emdpluginlib/include/: BinaryOutputModule.h  CMakeLists.txt  ColourManager.h  ColourMap.h  ColourMapImpl.h  ColourMapSelector.h  ComplexModule.h  DataGroupModule.h  EmdPluginLib.h  FrameSet.h  GradientDialog.h  Histogram.h  HistogramModule.h  HistogramScene.h  HistogramView.h  ImageWindowModule.h  ModuleSource.h  NumberBox.h  NumberRangeWidget.h  Plugin.h  PointCloud.h  ProcessingContext.h  ProcessingContextImpl.h  WorkContext.h  WorkerThread.h  Workflow.h  WorkflowModule.h  WorkflowSource.h
emdpluginlib/src/: BinaryOutputModule.cpp  CMakeLists.txt  ColourManager.cpp  ColourMap.cpp  ColourMapImpl.cpp  ColourMapSelector.cpp  ComplexModule.cpp  DataGroupModule.cpp  FrameSet.cpp  GradientDialog.cpp  Histogram.cpp  HistogramModule.cpp  HistogramScene.cpp  HistogramView.cpp  ImageWindowModule.cpp  NumberBox.cpp  NumberRangeWidget.cpp  ProcessingContext.cpp  ProcessingContextImpl.cpp  WorkContext.cpp  WorkerThread.cpp  Workflow.cpp  WorkflowModule.cpp
include/: BinaryExport.h  CMakeLists.txt  CentralWidget.h  DataTypeBox.h  DimensionWidget.h  DimensionsPane.h  EmdTypeBox.h  ExportOperation.h  FileBrowser.h  FileExporter.h  FileHelper.h  FloatBox.h  GraphicsImageItem.h  GraphicsImageWidget.h  GraphicsRegionSelectionItem.h  ImageExport.h  ImageScene.h  ImageWidget.h  ImageWindow.h  IntBox.h  LabeledSlider.h  LogView.h  MainGraphicsImageWidget.h  MainImageScene.h  MainImageView.h  MainImageWidget.h  MainWindow.h  Message.h  MessageModel.h  ModelManager.h  PreferencesDialog.h  StatusLabel.h  StyleConfig.h  ViewExport.h  WorkflowBrowser.h  WorkflowManager.h
platform/osx/: emdviewer.plist.in
plugins/: CMakeLists.txt
plugins/FourierTransform/: CMakeLists.txt
plugins/FourierTransform/include/: FourierTransformModule.h  FourierTransformPlugin.h
plugins/FourierTransform/src/: FourierTransformModule.cpp  FourierTransformPlugin.cpp
plugins/Integration/: CMakeLists.txt  Integration.pro
plugins/Integration/include/: IntegrationModule.h  IntegrationPlugin.h
plugins/Integration/src/: IntegrationModule.cpp  IntegrationPlugin.cpp
res/: colourmaps.xml  res.qrc
src/: BinaryExport.cpp  CMakeLists.txt  CentralWidget.cpp  DataTypeBox.cpp  DimensionWidget.cpp  DimensionsPane.cpp  EmdTypeBox.cpp  ExportOperation.cpp  FileBrowser.cpp  FileExporter.cpp  FileHelper.cpp  FloatBox.cpp  GraphicsImageItem.cpp  GraphicsImageWidget.cpp  GraphicsRegionSelectionItem.cpp  ImageExport.cpp  ImageScene.cpp  ImageWidget.cpp  ImageWindow.cpp  IntBox.cpp  LabeledSlider.cpp  LogView.cpp  MainGraphicsImageWidget.cpp  MainImageScene.cpp  MainImageView.cpp  MainImageWidget.cpp  MainWindow.cpp  Message.cpp  MessageModel.cpp  ModelManager.cpp  PreferencesDialog.cpp  StatusLabel.cpp  ViewExport.cpp  WorkflowBrowser.cpp  WorkflowManager.cpp  main.cpp
workflows/Core/: Basic.xml  Integration.xml
workflows/FourierTransform/: Basic.xml
